--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Sample</string>
+    <string name="no_items_image_content_description">no_items</string>
 </resources>
